Fixed homepage link in package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
-  "homepage": "hoveringtorso.github.io/Clicky-Game",
+  "homepage": "https://hoveringtorso.github.io/Clicky-Game",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
